changed all link colors, the pink was no longer visible on the light background

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -106,7 +106,7 @@ body.home_body {
   font-size: 20px; }
 
 .project-link-hp {
-  color: #D8BFD8; }
+  color: #5F9EA0; }
 
 /* ------------------------------ END home */
 /* ------------------------- home mobile */
@@ -264,7 +264,7 @@ img {
   margin-left: 5%; }
 
 .project-link {
-  color: #D8BFD8; }
+  color: #5F9EA0; }
 
 #resume-middle-section-container {
   display: flex;
